--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,95 @@
-/assets/css/
-/assets/img/
-/assets/scripts/
+/assets/css/pages/
+/assets/css/themes/
+/assets/css/style.css
+/assets/css/animate.css
+/assets/css/style-responsive.css
+/assets/css/print.css
+/assets/css/custom.css
+/assets/css/style-metronic.css
+/assets/css/plugins.css
+/assets/scripts/core/
+/assets/scripts/custom/
+/assets/img/avatar3_small.jpg
+/assets/img/logo-big-ltb.png
+/assets/img/bg-white.png
+/assets/img/portlet-remove-icon.png
+/assets/img/search-icon.png
+/assets/img/photo2.jpg
+/assets/img/portlet-reload-icon-white.png
+/assets/img/avatar1.jpg
+/assets/img/search-icon-white.png
+/assets/img/avatar1_small.jpg
+/assets/img/overlay-icon.png
+/assets/img/inbox-nav-arrow-blue.png
+/assets/img/sidebar-search-close.png
+/assets/img/arrow-down.png
+/assets/img/loading-spinner-grey.gif
+/assets/img/syncfusion-icons.png
+/assets/img/logo-big-metronic.png
+/assets/img/ajax-loading.gif
+/assets/img/icon-img-up.png
+/assets/img/sidebar-toggler.png
+/assets/img/bg-opacity.png
+/assets/img/search-icon-purple.png
+/assets/img/portlet-config-icon.png
+/assets/img/portlet-collapse-icon-white.png
+/assets/img/accordion-plusminus.png
+/assets/img/hor-menu-red-arrow.png
+/assets/img/hor-menu-search.png
+/assets/img/loading-spinner-default.gif
+/assets/img/sidebar-toggler-blue.jpg
+/assets/img/ajax-modal-loading.gif
+/assets/img/hor-menu-search.jpg
+/assets/img/sidebar-search-close-purple.png
+/assets/img/photo1.jpg
+/assets/img/bg-white-lock.png
+/assets/img/logo.png
+/assets/img/portlet-collapse-icon.png
+/assets/img/hor-menu-search-close.png
+/assets/img/sidebar-menu-arrow-green-reverse.png
+/assets/img/search-icon-light.png
+/assets/img/syncfusion-icons-white.png
+/assets/img/menu-toggler.png
+/assets/img/sidebar-menu-arrow-green.png
+/assets/img/input-spinner.gif
+/assets/img/select-caret.png
+/assets/img/sidebar-search-close-light.png
+/assets/img/search-icon-red.png
+/assets/img/sidebar-toggler.jpg
+/assets/img/avatar2.jpg
+/assets/img/icon-img-down.png
+/assets/img/loading.gif
+/assets/img/portlet-reload-icon.png
+/assets/img/portlet-config-icon-white.png
+/assets/img/sidebar-toggler-brown.jpg
+/assets/img/portlet-remove-icon-white.png
+/assets/img/sidebar-menu-arrow.png
+/assets/img/search-icon-brown.png
+/assets/img/sidebar-menu-arrow-reverse.png
+/assets/img/loading-spinner-blue.gif
+/assets/img/sidebar-toggler-light.jpg
+/assets/img/sidebar-search-close-brown.png
+/assets/img/remove-icon-small.png
+/assets/img/sidebar-search-close-blue.png
+/assets/img/avatar3.jpg
+/assets/img/sidebar-toggler-purple.jpg
+/assets/img/hor-menu-search-close-white.png
+/assets/img/portlet-expand-icon.png
+/assets/img/datatable-row-openclose.png
+/assets/img/icon-color.png
+/assets/img/icon-color-close.png
+/assets/img/sidebar-menu-arrow-right.png
+/assets/img/search-icon-blue.png
+/assets/img/portlet-expand-icon-white.png
+/assets/img/avatar.png
+/assets/img/email/
+/assets/img/invoice/
+/assets/img/flags/
+/assets/img/blog/
+/assets/img/bg/
+/assets/img/gallery/
+/assets/img/search/
+/assets/img/profile/
+/assets/img/social/
+/assets/img/works/
+/assets/img/pages/
