--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,12 @@
 /assets/img/social/
 /assets/img/works/
 /assets/img/pages/
+/assets/css-new/themes/
+/assets/css-new/custom.css
+/assets/css-new/style-metronic.css
+/assets/css-new/plugins.css
+/assets/css-new/pages/
+/assets/css-new/style-responsive.css
+/assets/css-new/animate.css
+/assets/css-new/print.css
+/assets/css-new/style.css
